syntax = "proto3";

package blog;
option go_package="./blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string content = 3; 
    string title = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;
}

message GetBlogRequest {
    string id = 1;
}

message GetBlogResponse {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogRequest {
    string id = 1;
}

message DeleteBlogResponse {
}

message ListBlogRequest {
}

message ListBlogResponse {
    repeated Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
    rpc GetBlog(GetBlogRequest) returns (GetBlogResponse) {};
    rpc ListBlogs(ListBlogRequest) returns (ListBlogResponse) {};
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};
}
